run formatter in fork - run on java 16+ without --add-exports flags (#140)
run formatter in fork - run on java 16+ without --add-exports flags

Co-authored-by: Klara Ward <klaraw@spotify.com>